# platform.core.connectivity.libwifi-direct

./: .cproject  .project  CMakeLists.txt
binary/: CMakeLists.txt  dhcpd-notify.sh  udhcp_script.non-autoip  wfd-manager  wifi-direct-dhcp.sh
debian/: changelog  control  libwifi-direct-dev.install.in  libwifi-direct.install.in  rules
include/: wifi-direct-internal.h  wifi-direct.h
packaging/: libwifi-direct.changes  libwifi-direct.spec
src/: CMakeLists.txt  wifi-direct-client-proxy.c  wifi-direct-utils.c  wifi-direct.pc.in
src/include/: wifi-direct-client-proxy.h
